# gemmini-amaranth

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
chisel/src/main/scala/: AccumulatorScale.scala  Activation.scala  Arithmetic.scala  Configs.scala  ConfigsFP.scala  Controller.scala  CounterFile.scala  DMACommandTracker.scala  Dataflow.scala  ExecuteController.scala  GemminiConfigs.scala  Im2Col.scala  LoadController.scala  LoopConv.scala  LoopMatmul.scala  Main.scala  MeshWithDelays.scala  MultiHeadedQueue.scala  Normalizer.scala  Pipeline.scala  PixelRepeater.scala  ReservationStation.scala  RoCC.scala  Scratchpad.scala  Shifter.scala  Status.scala  StoreController.scala  SyncMem.scala  Tile.scala  TransposePreloadUnroller.scala  XactTracker.scala
gemmini_amaranth/: __init__.py  bus.py  driver.py  gemmini.py  generate.py
gemmini_amaranth/chisel/: build.sbt
gemmini_amaranth/chisel/src/main/scala/: AccumulatorMem.scala  AccumulatorScale.scala  BeatMerger.scala  ConfigsFP.scala  Controller.scala  CounterFile.scala  ExecuteController.scala  GemminiISA.scala  Generator.scala  Im2Col.scala  LoadController.scala  LocalAddr.scala  LoopConv.scala  Mesh.scala  MeshWithDelays.scala  NormCmd.scala  PE.scala  SharedExtMem.scala  Status.scala  StoreController.scala  TagQueue.scala  TransposePreloadUnroller.scala  Transposer.scala  Util.scala  VectorScalarMultiplier.scala  WeightedArbiter.scala  XactTracker.scala  ZeroWriter.scala
test/: helpers.py  test_bus.py  test_gemmini.py
